--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-    "name": "new",
-    "version": "0.0.0",
-    "private": true,
-    "scripts": {
-        "start": "node ./bin/www"
-    },
-    "dependencies": {
-        "body-parser": "~1.17.1",
-        "cookie-parser": "~1.4.3",
-        "cors": "^2.8.3",
-        "debug": "~2.6.3",
-        "express": "~4.15.2",
-        "jade": "~1.11.0",
-        "morgan": "~1.8.1",
-        "mysql": "^2.13.0",
-        "serve-favicon": "~2.4.2"
-    }
+  "name": "new",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "body-parser": "~1.17.1",
+    "connect-busboy": "0.0.2",
+    "cookie-parser": "~1.4.3",
+    "cors": "^2.8.3",
+    "debug": "~2.6.3",
+    "express": "~4.15.2",
+    "express-fileupload": "^0.1.3",
+    "fs-extra": "^3.0.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.8.1",
+    "mysql": "^2.13.0",
+    "serve-favicon": "~2.4.2"
+  }
 }
